--- a/dpc-web/css/product-fabric-collection.css
+++ b/dpc-web/css/product-fabric-collection.css
@@ -750,4 +750,182 @@ footer .footer-bottom p {
 }
 
 
+/**************************************************
+                MOBILE CSS AREA 
+****************************************************/
+@media (max-width: 768px) {
+    body {
+       background: var(--blue_bg);
+       width: 100%;
+    }
+    .sidebar {
+        display: none;
+    }
 
+    h2.title {
+        font-size: 28px;
+        line-height: 42px;
+        font-family: "DP Céline";
+        text-transform: uppercase;
+        font-weight: 100;
+        margin: 0;
+        letter-spacing: 2px;
+        z-index: 999;
+        pointer-events: none;
+    }
+    
+    h2.title span {
+        font-family: 'DP Céline';
+        font-size: 28px;
+        font-style: italic;
+        font-weight: 100;
+        line-height: 42px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        z-index: 999;
+    }
+
+    .big-layout {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        
+        background: url('../images/BG-items.webp');
+        background-color: #202E41;
+        background-size: cover;
+        background-repeat: no-repeat;
+        mix-blend-mode: lumino1sity !important;
+        overflow: hidden;
+    }
+    .layout{
+        width: 100%;
+        max-width: none;
+    }
+
+    /************************** Header ************************/
+    section.header{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    section.header .container{
+        width: 100%;
+    }
+    section.header .container .top_head{
+        display: flex;
+        justify-content: space-between;
+        animation: none;
+    }
+    section.header .container .top_head .logo{
+        display: flex;
+        text-align: start;
+    }
+    section.header #contact{
+        display: none;
+    }
+    .body_head {
+        padding: 10vh 0 2vh;
+        animation: none;
+    }
+    .top_head .menu_right{
+        gap: 10px;
+        /* margin-left: 2vw; */
+    }
+    .body_head h1 {
+        font-size: 48px;
+        text-align: center;
+        /* text-transform: uppercase; */
+        font-family: "DP Céline";
+        letter-spacing: 2px;
+    }
+
+    .body_head span {
+        font-family: 'DP Céline';
+        font-size: 48px;
+        text-align: center;
+        font-style: italic;
+        font-weight: 100;
+        text-transform: uppercase;
+        margin-left: -8px;
+        margin-right: 6px;
+    }
+
+    .body_head #line{
+        /* Line 3 */
+        margin-top :15px;
+        width: 100%;
+        height: 0px;
+        border: 1px solid rgba(253, 252, 245, 0.2);
+    }
+
+    .tab-general-fabric .tab-collection-design{
+        display: flex;
+        justify-content: center;
+        margin-left: 4vw;
+        gap: 24px;
+    }
+
+
+    .tab-general-fabric .tab-collection-design #next-tab{
+        /* Collection */
+        text-decoration: none ;
+ 
+        /* iv - 48 */
+        font-family: 'DP Céline';
+        font-style: normal;
+        font-weight: 100;
+        font-size: 28px;
+        line-height: 42px;
+        /* identical to box height, onextr 150% */
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 2px;
+    
+        /* beige / 600 */
+        color: #8D7863;
+    }
+    .tab-general-fabric .tab-collection-design #current-tab{
+        /* Collection */
+        text-decoration: none ;
+    
+        /* iv - 48 */
+        font-family: 'DP Céline';
+        font-style: normal;
+        font-weight: 100;
+        font-size: 28px;
+        line-height: 42px;
+        /* identical to box height, or 150% */
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 2px;
+        color: var(--main);
+    }
+    
+    .tab-general-fabric .all-category-dropdown .dropdown{
+        display: none;
+    }
+    .tab-general-fabric .menu_right_filter .dropdown{
+        display: none;
+    }
+
+    .tab-general-fabric .menu_right_filter #btn-filter{
+        background-color: #F7F5F3;
+        color: #3B3229;
+        z-index: 999;
+        top: 90vh;
+        left : 38vw;
+        position: fixed;
+    }
+    .tab-general-fabric .menu_right_filter #filter-icon{
+        display: none;
+    }
+    .tab-general-fabric .menu_right_filter #filter-icon2{
+        display: block;
+        margin-left: -5px;
+    }
+    
+}
